site achieved MVP.  red dot renders on index page w/ 1 or more inches of snow at the 4 index location.  graphs function properly.  work to be done on avy forcast page and on maps page

--- a/avyDash.html
+++ b/avyDash.html
@@ -70,17 +70,17 @@
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle red"></i>
-                                <span class="title"><h5>Steamboat and Flat Tops</h5></span>
+                                <span class="title"><h5>Steamboat</h5></span>
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle orange lighten-1"></i>
-                                <span class="title"><h5>Vail and Summit County</h5></span>
+                                <span class="title"><h5>Vail</h5></span>
                                 <a href="#!" class="secondary-content"><h5>8"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle orange lighten-1"></i>
-                                <span class="title"><h5>Sawatch Range</h5></span>
+                                <span class="title"><h5>Monarch</h5></span>
                                 <a href="#!" class="secondary-content"><h5>10"</h5></a>
                             </li>
                             <li class="collection-item avatar">
@@ -90,7 +90,7 @@
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle teal"></i>
-                                <span class="title"><h5>Gunnison</h5></span>
+                                <span class="title"><h5>Crested Butte</h5></span>
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                             <li class="collection-item avatar">
@@ -140,8 +140,7 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Sunshine Daydream</h5>
-                        <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead
-                            to informed and safe travel decisions in the winter backcountry.</p>
+                        <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack.</p>
                     </div>
                     <div class="col l3 s12">
                         <h5 class="white-text">Guides</h5>
