--- a/slopeDash.html
+++ b/slopeDash.html
@@ -57,8 +57,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead to
-                        informed and safe travel decisions in the winter backcountry.</p>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack.</p>
 
 
                 </div>
