added credits page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                         <h5 class="center">CAIC Forecast</h5>
 
-                        <p class="light">Combine the CAIC zone forecasts with SNOTEL weather stations.  Find which areas have recieved the most snow lately and compare them to avalanche forecasts</p>
+                        <p class="light">Combine the CAIC zone forecasts with SNOTEL weather stations. Find which areas have recieved the most snow lately and compare them to avalanche forecasts</p>
                     </div>
                 </div>
 
@@ -82,7 +82,7 @@
                         <h2 class="center brown-text"><a class="btn-floating btn-large waves-effect waves-light teal lighten-1 mapsIcons rightIcon" href="snotelDash.html"><img src="placeholder.png" class="placeImg"></a></h2>
                         <h5 class="center">SNOTEL Dashboard</h5>
 
-                        <p class="light">Access extensice charts and graphs that are plugged into the SNOTEL sites.   This page provide accurate analysis of observations that are updated daily.  </p>
+                        <p class="light">Access extensice charts and graphs that are plugged into the SNOTEL sites. This page provide accurate analysis of observations that are updated daily. </p>
                     </div>
                 </div>
 
@@ -92,7 +92,7 @@
             class="angleImg" src="folded-map.png"></a></h2>
                         <h5 class="center">Slope Angle Maps</h5>
 
-                        <p class="light">Use one or all of the embedded maps to plan your next trip.   Slope angle overlays allow for basic identification of avalache prone slopes.   Satellite view allows for terrain identification</p>
+                        <p class="light">Use one or all of the embedded maps to plan your next trip. Slope angle overlays allow for basic identification of avalache prone slopes. Satellite view allows for terrain identification</p>
                     </div>
                 </div>
             </div>
@@ -104,12 +104,12 @@
     <div class="parallax-container">
         <!-- <div class="container"> -->
         <!-- <div class="row mapCont"> -->
-            <!-- these will ideally render in order of most snow to least -->
-            <div class="flexIndexCards row">
-                <div class="col m1">
-                </div>
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
+        <!-- these will ideally render in order of most snow to least -->
+        <div class="flexIndexCards row">
+            <div class="col m1">
+            </div>
+            <div class="col s12 m5">
+                <div class="card-panel teal">
                     <span class="white-text">
                        <div>
                           <h5 class="center">Eldora</h5>
@@ -117,10 +117,10 @@
                           <h5 class="temp1 center"></h5>
                         </div>
                     </span>
-                  </div>
                 </div>
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
+            </div>
+            <div class="col s12 m5">
+                <div class="card-panel teal">
                     <span class="white-text">
                        <div>
                           <h5 class="center">Berthoud</h5>
@@ -128,14 +128,14 @@
                           <h5 class="temp2 center"></h5>
                         </div>
                     </span>
-                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col m1">
-                </div>
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col m1">
+            </div>
+            <div class="col s12 m5">
+                <div class="card-panel teal">
                     <span class="white-text">
                       <div>
                         <h5 class="center">Copper</h5>
@@ -143,10 +143,10 @@
                         <h5 class="temp4 center"></h5>
                       </div>
                     </span>
-                  </div>
                 </div>
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
+            </div>
+            <div class="col s12 m5">
+                <div class="card-panel teal">
                     <span class="white-text">
                        <div>
                           <h5 class="center">RMNP</h5>
@@ -154,13 +154,13 @@
                           <h5 class="temp3 center"></h5>
                         </div>
                     </span>
-                  </div>
                 </div>
             </div>
+        </div>
 
 
-            <!-- <div class="col s4"> -->
-            <!-- <iframe name="caic_fx_map" id="caic_fx_map"
+        <!-- <div class="col s4"> -->
+        <!-- <iframe name="caic_fx_map" id="caic_fx_map"
                   src="http://avalanche.state.co.us/caic/fx_map.php"
                   width="495px" height="565px"
                   scrolling="no" marginwidth="0"
@@ -168,9 +168,9 @@
                   vspace="0" hspace="0">
                 <p>Your browser does not support iframes.</p>
             </iframe> -->
-            <!-- </div> -->
+        <!-- </div> -->
 
-            <!-- <div class="col s4 indexFlexBox indexStats">
+        <!-- <div class="col s4 indexFlexBox indexStats">
               <div>
                 <h5 class="snow1"></h5>
                 <h5 class="snowDepth1 center"></h5>
@@ -192,7 +192,7 @@
                 <h5 class="temp4 center"></h5>
               </div>
           </div> -->
-            <!-- <div class="col s4">
+        <!-- <div class="col s4">
                 <iframe id="slopeMap" src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZvxCgw' frameborder="0" style='height: 555px; width: 495px;'></iframe>
           </div>-->
         <div class="row center indexIcons">
@@ -238,7 +238,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack.</p>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack. <a class="brown-text text-lighten-3" href="credits.html">Icon Credits</a></p>
 
 
                 </div>
