--- a/slopeDash.html
+++ b/slopeDash.html
@@ -52,6 +52,11 @@
                 if weather is particularry hot warning message should pop up saying to expec </p>
         </div>
     </div>
+    <div class="row">
+      <div class="container">
+        <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICIwa22Cgw' style='height: 555px; width: 495px;'></iframe>
+      </div>
+    </div>
     <footer class="page-footer teal">
         <div class="container">
             <div class="row">
