Avy page is finished.  lots of if statements to control the scenerio of stations not reporting.  click on red button. maps finilized

--- a/avyDash.html
+++ b/avyDash.html
@@ -53,7 +53,7 @@
               <p>Your browser does not support iframes.</p>
             </iframe>
         </div>
-        <div class="col s6">
+        <div class="col s5">
 
             <!-- <ul class="collapsible popout" data-collapsible="accordion">
 
@@ -66,47 +66,42 @@
                             <li class="collection-item avatar shrinkZones">
                                 <i class="fa fa-snowflake-o circle red"></i>
                                 <span class="title"><h5>Front Range</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avrgFrontRange">7"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avFR">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle red"></i>
                                 <span class="title"><h5>Steamboat</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avSB">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle orange lighten-1"></i>
                                 <span class="title"><h5>Vail</h5></span>
-                                <a href="#!" class="secondary-content"><h5>8"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avVail">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle orange lighten-1"></i>
                                 <span class="title"><h5>Monarch</h5></span>
-                                <a href="#!" class="secondary-content"><h5>10"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avMon">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle teal"></i>
                                 <span class="title"><h5>Aspen</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avAsp">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle teal"></i>
                                 <span class="title"><h5>Crested Butte</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avCB">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle"></i>
                                 <span class="title"><h5>Sangre de Cristo</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avSDC">-"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle"></i>
-                                <span class="title"><h5>Northern San Jauns</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle"></i>
-                                <span class="title"><h5>Southern San Jauns</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                                <span class="title"><h5>Telluride</h5></span>
+                                <a href="#!" class="secondary-content"><h5 class="avTel">-"</h5></a>
                             </li>
                         </ul>
                     <!-- </div>
