--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!--  Danger icon make active only w/ more than 6 inches of snow -->
 
     <div class="fixed-action-btn horizontal" id="newSnow" style="bottom: 15px; right: 15px; display: none">
-        <a class="btn-floating btn-large red">
+        <a class="btn-floating btn-large red" href="snotelDash.html">
             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
         </a>
     </div>
