--- a/slopeDash.html
+++ b/slopeDash.html
@@ -47,16 +47,26 @@
     </div>
     <div class="row">
         <div class="container">
-            <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZvxCgw' frameborder="0" style='height: 555px; width: 495px;' marginwidth="0" marginheight="0"></iframe>
-            <p>over here we can hav infornatio adn color coded boxes that describe slope angle. maybe have some inforation about slope angle and when slide potentional kicks in. information about terrain traps and the effects of wet snow on slope angle.
-                if weather is particularry hot warning message should pop up saying to expec </p>
+            <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZvxCgw' frameborder="0" style='height: 555px; width: 900px;' marginwidth="0" marginheight="0"></iframe>
+            <p>CalTopo slope angle shading</p>
+            <p>* While helpful for general observations this tool is not perfectly accurate. Avalanches may be possible in zones not highlighted.</p>
         </div>
     </div>
     <div class="row">
-      <div class="container">
-        <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICIwa22Cgw' style='height: 555px; width: 495px;'></iframe>
-      </div>
+        <div class="container">
+            <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICIwa22Cgw' style='height: 555px; width: 900px;'></iframe>
+            <p>NOAA Weather Radio</p>
+        </div>
     </div>
+
+
+    <div class="row">
+        <div class="container">
+            <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICImJf5CAw' style='height: 600px; width: 900px;'></iframe>
+            <p>Google Satellite Veiw</p>
+        </div>
+    </div>
+
     <footer class="page-footer teal">
         <div class="container">
             <div class="row">
