updated snotel sites. added read me

--- a/credits.html
+++ b/credits.html
@@ -43,6 +43,7 @@
   <div class="container">
     <p>Backpack and SNOTEL Dashboard icon made by <a href="http://www.flaticon.com/authors/madebyoliver">Madebyoliver</a> from www.flaticon.com </p>
     <p>Avalanche, Skis, Goggles, and Map icon made by <a href="http://www.flaticon.com/authors/freepik">Freepik</a> from www.flaticon.com </p>
+    <p><a href="http://powderlin.es/">Powder Lines API</a></p>
   </div>
 
 
