--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                     <span class="white-text">
                       <div>
                         <h5 class="center">Copper</h5>
-                        <h5 class="snowDepth4 center"></h5>
-                        <h5 class="temp4 center"></h5>
+                        <h5 class="snowDepth3 center"></h5>
+                        <h5 class="temp3 center"></h5>
                       </div>
                     </span>
                 </div>
@@ -150,8 +150,8 @@
                     <span class="white-text">
                        <div>
                           <h5 class="center">RMNP</h5>
-                          <h5 class="snowDepth3 center"></h5>
-                          <h5 class="temp3 center"></h5>
+                          <h5 class="snowDepth4 center"></h5>
+                          <h5 class="temp4 center"></h5>
                         </div>
                     </span>
                 </div>
@@ -238,7 +238,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack. <a class="brown-text text-lighten-3" href="credits.html">Icon Credits</a></p>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack. <a class="brown-text text-lighten-3" href="credits.html">Icon Credits</a></p>
 
 
                 </div>
