--- a/avyDash.html
+++ b/avyDash.html
@@ -33,9 +33,9 @@
             </ul>
         </div>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="avyDash.html">CAIC Forecast</a></li>
-          <li><a href="snotelDash.html">SNOTEL Dashboard</a></li>
-          <li><a href="slopeDash.html">Slop Angle Dashboard</a></li>
+            <li><a href="avyDash.html">CAIC Forecast</a></li>
+            <li><a href="snotelDash.html">SNOTEL Dashboard</a></li>
+            <li><a href="slopeDash.html">Slop Angle Dashboard</a></li>
         </ul>
     </nav>
 
@@ -45,87 +45,56 @@
     <div class="row">
     </div>
     <div class="row">
-        <!-- <div class="container"> -->
         <div class="col s1">
         </div>
-        <div class="col s5">
+        <div class="col m5 s12">
             <iframe name="caic_fx_map" id="caic_fx_map" src="http://avalanche.state.co.us/caic/fx_map.php" width="495px" height="565px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0">
               <p>Your browser does not support iframes.</p>
             </iframe>
         </div>
-        <div class="col s5">
-
-            <!-- <ul class="collapsible popout" data-collapsible="accordion">
-
-                <li>
-                    <div class="collapsible-header active">
-                        <i class="fa fa-tree"></i> Backcountry Zones
-                    </div>
-                    <div class="collapsible-body"> -->
-                        <ul class="collection">
-                            <li class="collection-item avatar shrinkZones">
-                                <i class="fa fa-snowflake-o circle red"></i>
-                                <span class="title"><h5>Front Range</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avFR">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle red"></i>
-                                <span class="title"><h5>Steamboat</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avSB">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle orange lighten-1"></i>
-                                <span class="title"><h5>Vail</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avVail">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle orange lighten-1"></i>
-                                <span class="title"><h5>Monarch</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avMon">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle teal"></i>
-                                <span class="title"><h5>Aspen</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avAsp">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle teal"></i>
-                                <span class="title"><h5>Crested Butte</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avCB">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle"></i>
-                                <span class="title"><h5>Sangre de Cristo</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avSDC">-"</h5></a>
-                            </li>
-                            <li class="collection-item avatar">
-                                <i class="fa fa-snowflake-o circle"></i>
-                                <span class="title"><h5>Telluride</h5></span>
-                                <a href="#!" class="secondary-content"><h5 class="avTel">-"</h5></a>
-                            </li>
-                        </ul>
-                    <!-- </div>
+        <div class="col m5 s12">
+            <ul class="collection">
+                <li class="collection-item avatar shrinkZones">
+                    <i class="fa fa-snowflake-o circle red"></i>
+                    <span class="title"><h5>Front Range</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avFR">-"</h5></a>
                 </li>
-                <li> -->
-                    <!-- <div class="collapsible-header"><i class="fa fa-building"></i>Inbound Resorts</div>
-                    <div class="collapsible-body">
-                        <form>
-                            <input type="date" class="datepicker" value="start date">
-                        </form>
-                    </div>
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle red"></i>
+                    <span class="title"><h5>Steamboat</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avSB">-"</h5></a>
                 </li>
-                <li>
-                    <div class="collapsible-header"><i class="fa fa-bar-chart"></i>Graphs and Data</div>
-                    <div class="collapsible-body">
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                            anim id est laborum.</p>
-                    </div>
-                </li> -->
-            <!-- </ul> -->
-
-
-            <!-- </div> -->
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle orange lighten-1"></i>
+                    <span class="title"><h5>Vail</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avVail">-"</h5></a>
+                </li>
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle orange lighten-1"></i>
+                    <span class="title"><h5>Monarch</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avMon">-"</h5></a>
+                </li>
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle teal"></i>
+                    <span class="title"><h5>Aspen</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avAsp">-"</h5></a>
+                </li>
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle teal"></i>
+                    <span class="title"><h5>Crested Butte</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avCB">-"</h5></a>
+                </li>
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle"></i>
+                    <span class="title"><h5>Sangre de Cristo</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avSDC">-"</h5></a>
+                </li>
+                <li class="collection-item avatar">
+                    <i class="fa fa-snowflake-o circle"></i>
+                    <span class="title"><h5>Telluride</h5></span>
+                    <a href="#!" class="secondary-content"><h5 class="avTel">-"</h5></a>
+                </li>
+            </ul>
         </div>
         <div class="row">
         </div>
@@ -135,7 +104,7 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Sunshine Daydream</h5>
-                        <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack.</p>
+                        <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack.</p>
                     </div>
                     <div class="col l3 s12">
                         <h5 class="white-text">Guides</h5>
