--- a/slopeDash.html
+++ b/slopeDash.html
@@ -63,7 +63,7 @@
     <div class="row">
         <div class="container">
             <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICImJf5CAw' style='height: 600px; width: 900px;'></iframe>
-            <p>Google Satellite Veiw</p>
+            <p>Google Satellite View</p>
         </div>
     </div>
 
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded as a tool to provide indepth information regarding the current weather conditions and snowpack.</p>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack.</p>
 
 
                 </div>
