year button passes a time value into JSON request

--- a/snotelDash.html
+++ b/snotelDash.html
@@ -56,15 +56,15 @@
             <div class="col s4">
                 <form action="#">
                     <p>
-                        <input name="WK" type="radio" id="week" />
+                        <input name="time" type="radio" id="week" value="WK"/>
                         <label for="week">Week</label>
                     </p>
                     <p>
-                        <input name="MN" type="radio" id="month" />
+                        <input name="time" type="radio" id="month" value="MN"/>
                         <label for="month">Month</label>
                     </p>
                     <p>
-                        <input name="YR" type="radio" id="year" />
+                        <input name="time" type="radio" id="year" value="YR"/>
                         <label for="year">Year</label>
                     </p>
                 </form>
