dates now format properly and dynamicaly grab data to display on x axis.  radio buttons are not integer based rather then month or year

--- a/snotelDash.html
+++ b/snotelDash.html
@@ -57,15 +57,15 @@
                 <form action="#">
                     <p>
                         <input name="time" type="radio" id="week" value="WK"/>
-                        <label for="week">Week</label>
+                        <label for="week">7 Days</label>
                     </p>
                     <p>
                         <input name="time" type="radio" id="month" value="MN"/>
-                        <label for="month">Month</label>
+                        <label for="month">30 Days</label>
                     </p>
                     <p>
                         <input name="time" type="radio" id="year" value="YR"/>
-                        <label for="year">Year</label>
+                        <label for="year">365 days</label>
                     </p>
                 </form>
             </div>
@@ -73,7 +73,7 @@
                 <form action="#">
                     <p>
                         <input name="SP" type="radio" id="snowpack" value="SP"/>
-                        <label for="snowpack">Snowpack</label>
+                        <label for="snowpack">Snowpack/Temperature</label>
                     </p>
                     <p>
                         <input name="NS" type="radio" id="newSnow" value="NS"/>
