added functionality to 7 and 30 days w/ snowpack, new snow, snow  water equiv.  Now need to adress 360 days

--- a/snotelDash.html
+++ b/snotelDash.html
@@ -72,15 +72,15 @@
             <div class="col s4">
                 <form action="#">
                     <p>
-                        <input name="SP" type="radio" id="snowpack" value="SP"/>
+                        <input name="dataType" type="radio" id="snowpack" value="SP"/>
                         <label for="snowpack">Snowpack/Temperature</label>
                     </p>
                     <p>
-                        <input name="NS" type="radio" id="newSnow" value="NS"/>
+                        <input name="dataType" type="radio" id="newSnow" value="NS"/>
                         <label for="newSnow">New Snow</label>
                     </p>
                     <p>
-                        <input name="SWE" type="radio" id="swEquiv" value="SWE"/>
+                        <input name="dataType" type="radio" id="swEquiv" value="SWE"/>
                         <label for="swEquiv">Snow Water Equivalent</label>
                     </p>
                 </form>
