--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack. <a class="brown-text text-lighten-3" href="credits.html">Icon Credits</a></p>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack. SNOTEL API is provided by <a class="brown-text text-lighten-3" href="http://powderlin.es/api.html">powderlin.es </a> --- <a class="brown-text text-lighten-3" href="credits.html">Icon Credits</a></p>
 
 
                 </div>
