--- a/slopeDash.html
+++ b/slopeDash.html
@@ -35,7 +35,7 @@
         <ul class="side-nav" id="mobile-demo">
             <li><a href="avyDash.html">CAIC Forecast</a></li>
             <li><a href="snotelDash.html">SNOTEL Dashboard</a></li>
-            <li><a href="slopeDash.html">Slop Angle Dashboard</a></li>
+            <li><a href="slopeDash.html">Slope Angle Dashboard</a></li>
         </ul>
     </nav>
 
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack.</p>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is intended as a tool to provide in depth information regarding the current weather conditions and snowpack. SNOTEL API is provided by <a class="brown-text text-lighten-3" href="http://powderlin.es/api.html">powderlin.es </a>  <br></p>
 
 
                 </div>
